// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) hide_var LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "hide_var",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) call_after_init LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "call_after_init",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) warning_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "warning_message",
  "tcErrors": 0,
  "tcWarnings": 1,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) noinit LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "noinit",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_on_onlchange LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "init_on_onlchange",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_hex LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "displaymode_hex",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_copy LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "no_copy",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) linkalways LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "linkalways",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_check LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "no_check",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_instance_in_retain LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "no_instance_in_retain",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) hide_all_locals LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "hide_all_locals",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_assign LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "no_assign",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) reflection LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "reflection",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) unknown_attribute_typo LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "unknown_attribute_typo",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) enable_dynamic_creation LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "enable_dynamic_creation",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) const_replaced LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "const_replaced",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) const_non_replaced LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "const_non_replaced",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) global_init_slot LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "global_init_slot",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) monitoring_display LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "monitoring_display",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) monitoring_encoding LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "monitoring_encoding",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) subsequent LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "subsequent",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) suppress_warning LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "suppress_warning",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditionalshow LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "conditionalshow",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) pingroup LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "pingroup",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) info_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "info_message",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) text_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "text_message",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) instance_path_with_reflection LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "instance_path_with_reflection",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_bin LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "displaymode_bin",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_dec LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "displaymode_dec",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_invalid_value LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "displaymode_invalid_value",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) suppress_warning_multi LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "suppress_warning_multi",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_init_aliases LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "no_init_aliases",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) linkalways_with_unused_pou LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "linkalways_with_unused_pou",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) region_basic LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "region_basic",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) error_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "error_message",
  "tcErrors": 1,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "fb_init_canonical",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_reinit_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "fb_reinit_canonical",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_exit_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "fb_exit_canonical",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_wrong_return_type LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspWarnings": 1,
  "name": "fb_init_wrong_return_type",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_missing_bInCopyCode LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspWarnings": 1,
  "name": "fb_init_missing_bInCopyCode",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_exit_missing_bInCopyCode LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspWarnings": 1,
  "name": "fb_exit_missing_bInCopyCode",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_reinit_with_params LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspWarnings": 1,
  "name": "fb_reinit_with_params",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) identifier_double_underscore LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspWarnings": 0,
  "name": "identifier_double_underscore",
  "tcErrors": 5,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) identifier_consecutive_underscores LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspWarnings": 0,
  "name": "identifier_consecutive_underscores",
  "tcErrors": 5,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_default_50000 LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "init_slot_default_50000",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_reserved_alarm_manager LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "init_slot_reserved_alarm_manager",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_reserved_device_object LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "init_slot_reserved_device_object",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_user_early LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "init_slot_user_early",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) shadowing_method_local_shadows_member LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "shadowing_method_local_shadows_member",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) shadowing_method_param_shadows_member LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "shadowing_method_param_shadows_member",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_int_to_real_valid LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 3,
  "name": "conversion_int_to_real_valid",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_real_to_int_valid LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 3,
  "name": "conversion_real_to_int_valid",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_int_to_real_wrong_source LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspWarnings": 3,
  "name": "conversion_int_to_real_wrong_source",
  "tcErrors": 1,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_dint_to_int_wrong_source LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 3,
  "name": "conversion_dint_to_int_wrong_source",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_implicit_dint_to_int LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspWarnings": 2,
  "name": "conversion_implicit_dint_to_int",
  "tcErrors": 1,
  "tcWarnings": 0,
}
`;
